Style Fixes
Fixed a linespacing from former body linespacing to make links less squished when they wrap multiple lines

--- a/Style.css
+++ b/Style.css
@@ -23,6 +23,7 @@ body { /*The body provides something for everything to hang off of. A last-ditch
 	background-color: #221F20;
 	color: #EEEEEE;
 	margin-bottom: 40px;
+/* 	line-height: 1.8em; */
 }
 	
 /* margin: top right bottom left; */
@@ -93,9 +94,11 @@ code::selection {
 
 a {
 	text-decoration: none;
+	line-height: 1.65em;
 }
 
 a:link {
+	text-decoration: none;
 	color: #40AFD0;
 	border-color: #0082C9;
 	border-width: 1px;
@@ -113,6 +116,7 @@ a:visited {
 
 a:hover {
 	color: white;
+	text-decoration: none;
 	background-color: #0082C9;
 	border-color: #0082C9;
 }
@@ -122,7 +126,9 @@ a:visited:hover {
 	background-color: #A21A68;
 	border-color: #A21A68;
 }
-
+a em {
+	padding-bottom: 2px; /* Hack for WebKit; otherwise the underscore padding is 0 */
+	}
 
 sup {
 	line-height: 0px;
